
23/06/2002 (Jir)
- login is done according to the informations sent by the server.
  (race/class addition still needs client update, tho)
- SKILL_MISC, SKILL_AGILITY, SKILL_CALMNESS, SKILL_SWIM, SKILL_RICOCHET,
  SKILL_BOOMERANG, SKILL_MARTIAL_ARTS, SKILL_TRAINING, SKILL_INTERCEPT
- bow/xbow/sling/boomerang skills can prevent ammos from breaking.
- MKEY_PRAY is valid now.
[B] potion of learning.
[B] MHIT +2632, MDAM +1318



** [B] stands for Bugfix.
** [C] stands for Client changes.
** [H] stands for Hack and rebalancement :)
** [P] stands for Porting from ToME.

=============================================================================
concisely: what's hot now?

- multiple-dungeons stuff
  + we should preserve level_up_y etc. for manually-added dungeons/towers.
- quest system
- skill system
  + SKILL_CLIMB
  + spell_info should be redone
- LUA hook
- csfunc
- alignment (let's wait for EE :)
- item stacking

=============================================================================
below this line are the unfixed bugs known:

[B] House doors still seem to crash sometimes. (door even vanishes??)
[B] wpos display hides wound states(eg.'Deep Gash')
[B] ever-charging arts (eg.star)
[B] 'You hit it.' etc in town (99% problem in zcave.m_idx)
    sometimes, monsters attack the player from nowhere.. prolly same root?
	* this only happens when rebooting the server and caves lost.
[B] some monsters become 'immune' to spell attacks.
[B][C] chat-history contains lines with 'mindcrafter'. 
[B] p_ptr->furry, lol
[B] 'Ring of Polymorphing of'.
[B] cannot 'run' near the outer permawall (run_test)
[B] mon_vis, obj_vis etc. are messed while the player is off.
[B] option '-r' puts the server into infinite-loop (genwild)
[B] GCU client flickers like hell. (fix_player)
[B] GCU client cannot handle the cursor very well.
[B] some ivents are not told to the players even when within the sight.
[B] white '@' sometimes appear on the screen.
