@@ -1162,7 +1162,7 @@ T:23:0:255
 T:24:0:255
 X:A:24:0
 #W:0:1:1:0
-W:0:1:30:0
+W:15:1:50:0
 C:-20:-20:-10:-10
 R:100
 F:LUCK | 
