@@ -7,7 +7,7 @@
 # You should manually write the total # of rumous (lines - 10).
 
 N:*:Default
-617
+619
 They say that you can't trust rumors.
 You have no more Black Potions of Death.
 They say that smart guys hang around at 1600'.
@@ -626,5 +626,6 @@ Why a wand of plenty contains plenty of charges? Because it's easy to charge.
 They say that a crazy monster can drive you crazy too.
 They say that a tanker can explode and sink with one single smallest torpedo.
 They say that an adventurer is just a Jack of all trades.
+They say that an yeek really needs exercises.
 They say that 
 They say that 
