@@ -1130,8 +1130,13 @@ To find the latest change quickly, search ==== :)
   SKILL_BOOMERANG, SKILL_MARTIAL_ARTS, SKILL_TRAINING, SKILL_INTERCEPT
 - bow/xbow/sling/boomerang skills can prevent ammos from breaking.
 - MKEY_PRAY is valid now.
+- /autotag, auto-inscribe manually.
+[H] Goodbye-Charlie trap toned down.
 [B] potion of learning.
 [B] MHIT +2632, MDAM +1318
+[B] master_generate was broken.
+[B] 'n' and 'p' didn't work well in the skill screen (common with ToME)
+[C] 'c' and 'o' key available in skill screen (for quick browsing)
 
 
 
@@ -1174,6 +1179,7 @@ below this line are the unfixed bugs known:
 [B] GCU client cannot handle the cursor very well.
 [B] some ivents are not told to the players even when within the sight.
 [B] white '@' sometimes appear on the screen.
+[B] Yeek seems to receive the best store prices.
 
 *below are bugs repoorted but not confirmed*
 [B] Macro sticks sometimes
@@ -1226,6 +1232,7 @@ memo and questions:
 - implement GF_* flags for exploding monsters(voir monster_death)
 - make boomerangs useful
 - flavor variator (eg. 'light' + 'red' => 'light red potion')
+- reimplement /cast.
 * Trap ideas
   - no return trap should steal books also?
   - telekinesis trap
